# plaquette-unionfind

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests_linux.yml  tests_windows.yml  wheels.yml
benchmarks/: benchmark.py  benchmark_helpers.py  plot_benchmark_1.py  plot_benchmark_2.py  plot_benchmark_3.py  run_imperfect_planar_benchmark.sh  run_imperfect_rotated_planar_benchmark.sh  run_imperfect_rotated_planar_benchmark_fixed_size.sh  run_perfect_planar_benchmark.sh
doc/: benchmarks.rst  conf.py  index.rst  requirements.txt
doc/code/: __init__.rst
plaquette_unionfind/: __init__.py  unionfind.py
plaquette_unionfind/src/: Bindings.cpp  ClusterBoundary.hpp  Clusters.hpp  ClustersOpt.hpp  ErrorModels.hpp  LatticeVisualizer.hpp  PeelingDecoder.hpp  SpanningForest.hpp  StabilizerCode.hpp  ToricCode.hpp  Types.hpp  UnionFindDecoder.hpp  Utils.hpp
plaquette_unionfind/src/micro_benchmarks/: CMakeLists.txt  clusters_grow_benchmark.cpp  syndrome_validation_benchmark.cpp
plaquette_unionfind/src/tests/: CMakeLists.txt  TestHelpers.hpp  Test_Cluster.hpp  Test_ClusterBoundary.hpp  Test_ClusterOpt.hpp  Test_StabilizerCode.hpp  Test_UnionFind.hpp  runner.cpp
tests/: test_interface.py  test_toric_interface.py  test_union_find.py
